--- a/ansibledeploy/deploy.yml
+++ b/ansibledeploy/deploy.yml
@@ -1,10 +1,10 @@
 ---
 - name: Deploy Docker image and Kubernetes resources for spemajorf
   hosts: localhost
-  remote_user: subbhashit
+  remote_user: aryanpatel
   become: false
   tasks:
     - name: Run Kubernetes Deployment files
-      shell: kubectl apply -f "{{ item }}" --namespace=your-namespace --serviceaccount=fork8s
+      shell: kubectl apply -f "{{ item }}" 
       with_fileglob:
         - ../kubernetes/*.yaml
