--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: spemajorf-container
-          image: 23subbhashit/spemajorf
+          image: aryanpatel111/spe_frontend
           ports:
             - containerPort: 3000
